src/objects/Customer_Info_External_c__x.object
<CustomObject>
    <description>Customer_Info_External__c</description>
    <externalDataSource>CustomApexHerokuConnector</externalDataSource>
    <externalName>caesars$customer_info</externalName>
    <fields>
        <fullName>RecordType__c</fullName>
        <description>RecordType</description>
        <externalDeveloperName>RecordType</externalDeveloperName>
        <label>RecordType</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acq_date__c</fullName>
        <externalDeveloperName>acq_date</externalDeveloperName>
        <label>Acq date</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acquisition_cd__c</fullName>
        <externalDeveloperName>acquisition_cd</externalDeveloperName>
        <label>Acquisition code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>addr_1__c</fullName>
        <externalDeveloperName>addr_1</externalDeveloperName>
        <label>Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>addr_2__c</fullName>
        <externalDeveloperName>addr_2</externalDeveloperName>
        <label>Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>addr_3__c</fullName>
        <externalDeveloperName>addr_3</externalDeveloperName>
        <label>Address 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>addr_desc__c</fullName>
        <externalDeveloperName>addr_desc</externalDeveloperName>
        <label>Address description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>addr_pref__c</fullName>
        <externalDeveloperName>addr_pref</externalDeveloperName>
        <label>Address pref</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>addr_status_cd__c</fullName>
        <externalDeveloperName>addr_status_cd</externalDeveloperName>
        <label>Address status code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>addr_type__c</fullName>
        <externalDeveloperName>addr_type</externalDeveloperName>
        <label>Address type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>address_1__c</fullName>
        <externalDeveloperName>address_1</externalDeveloperName>
        <label>Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>address_2__c</fullName>
        <externalDeveloperName>address_2</externalDeveloperName>
        <label>Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adi__c</fullName>
        <externalDeveloperName>adi</externalDeveloperName>
        <label>Adi</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adjust_base__c</fullName>
        <externalDeveloperName>adjust_base</externalDeveloperName>
        <label>Adjust base</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>age__c</fullName>
        <externalDeveloperName>age</externalDeveloperName>
        <label>Age</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>am_pm_cd__c</fullName>
        <externalDeveloperName>am_pm_cd</externalDeveloperName>
        <label>Am pm code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>annivers_dt__c</fullName>
        <externalDeveloperName>annivers_dt</externalDeveloperName>
        <label>Annivers date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>app_cd__c</fullName>
        <externalDeveloperName>app_cd</externalDeveloperName>
        <label>App code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>apt_num__c</fullName>
        <externalDeveloperName>apt_num</externalDeveloperName>
        <label>Apt num</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>area_cd__c</fullName>
        <externalDeveloperName>area_cd</externalDeveloperName>
        <label>Area code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>as_of__c</fullName>
        <externalDeveloperName>as_of</externalDeveloperName>
        <label>As of</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>asian_flag__c</fullName>
        <externalDeveloperName>asian_flag</externalDeveloperName>
        <label>Asian flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>assigned_century__c</fullName>
        <externalDeveloperName>assigned_century</externalDeveloperName>
        <label>Assigned century</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>assn_reason__c</fullName>
        <externalDeveloperName>assn_reason</externalDeveloperName>
        <label>Assn reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>avail_credit__c</fullName>
        <externalDeveloperName>avail_credit</externalDeveloperName>
        <label>Avail credit</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bed_type__c</fullName>
        <externalDeveloperName>bed_type</externalDeveloperName>
        <label>Bed type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>book_id__c</fullName>
        <externalDeveloperName>book_id</externalDeveloperName>
        <label>Book id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bounce_timestamp__c</fullName>
        <externalDeveloperName>bounce_timestamp</externalDeveloperName>
        <label>Bounce timestamp</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_xref_type__c</fullName>
        <externalDeveloperName>c_xref_type</externalDeveloperName>
        <label>Xref type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cards_top__c</fullName>
        <externalDeveloperName>cards_top</externalDeveloperName>
        <label>Cards top</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cards_total__c</fullName>
        <externalDeveloperName>cards_total</externalDeveloperName>
        <label>Cards total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>casino_id__c</fullName>
        <externalDeveloperName>casino_id</externalDeveloperName>
        <label>Casino id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>category_id__c</fullName>
        <externalDeveloperName>category_id</externalDeveloperName>
        <label>Category id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_expire_dt__c</fullName>
        <externalDeveloperName>cc_expire_dt</externalDeveloperName>
        <label>Cc expire date</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_number__c</fullName>
        <externalDeveloperName>cc_number</externalDeveloperName>
        <label>Cc number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_type__c</fullName>
        <externalDeveloperName>cc_type</externalDeveloperName>
        <label>Cc type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>channel_pref__c</fullName>
        <externalDeveloperName>channel_pref</externalDeveloperName>
        <label>Channel pref</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>city__c</fullName>
        <externalDeveloperName>city</externalDeveloperName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>city_name__c</fullName>
        <externalDeveloperName>city_name</externalDeveloperName>
        <label>City name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>comp_flag__c</fullName>
        <externalDeveloperName>comp_flag</externalDeveloperName>
        <label>Comp flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>companion_id__c</fullName>
        <externalDeveloperName>companion_id</externalDeveloperName>
        <label>Companion id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cons_rev_flag__c</fullName>
        <externalDeveloperName>cons_rev_flag</externalDeveloperName>
        <label>Cons rev flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <externalDeveloperName>contact</externalDeveloperName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Customer_Info_External_c</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>contact_count__c</fullName>
        <externalDeveloperName>contact_count</externalDeveloperName>
        <label>Contact count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>contact_dt__c</fullName>
        <externalDeveloperName>contact_dt</externalDeveloperName>
        <label>Contact date</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contact_dt_by_all__c</fullName>
        <externalDeveloperName>contact_dt_by_all</externalDeveloperName>
        <label>Contact date by all</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contact_id__c</fullName>
        <externalDeveloperName>contact_id</externalDeveloperName>
        <label>Contact id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>contact_status__c</fullName>
        <externalDeveloperName>contact_status</externalDeveloperName>
        <label>Contact status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contact_subject__c</fullName>
        <externalDeveloperName>contact_subject</externalDeveloperName>
        <label>Contact subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contacted_channel__c</fullName>
        <externalDeveloperName>contacted_channel</externalDeveloperName>
        <label>Contacted channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>country_cd__c</fullName>
        <externalDeveloperName>country_cd</externalDeveloperName>
        <label>Country code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>country_tele_cd__c</fullName>
        <externalDeveloperName>country_tele_cd</externalDeveloperName>
        <label>Country tele code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>county__c</fullName>
        <externalDeveloperName>county</externalDeveloperName>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>create_date__c</fullName>
        <externalDeveloperName>create_date</externalDeveloperName>
        <label>Create date</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>create_dt__c</fullName>
        <externalDeveloperName>create_dt</externalDeveloperName>
        <label>Create date</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>create_update__c</fullName>
        <externalDeveloperName>create_update</externalDeveloperName>
        <label>Create update</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>created_by__c</fullName>
        <externalDeveloperName>created_by</externalDeveloperName>
        <label>Created by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>creator_login__c</fullName>
        <externalDeveloperName>creator_login</externalDeveloperName>
        <label>Creator login</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cred_appr_by__c</fullName>
        <externalDeveloperName>cred_appr_by</externalDeveloperName>
        <label>Cred appr by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>credit_limit__c</fullName>
        <externalDeveloperName>credit_limit</externalDeveloperName>
        <label>Credit limit</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>credit_status__c</fullName>
        <externalDeveloperName>credit_status</externalDeveloperName>
        <label>Credit status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>curr_flag__c</fullName>
        <externalDeveloperName>curr_flag</externalDeveloperName>
        <label>Curr flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>current_cd__c</fullName>
        <externalDeveloperName>current_cd</externalDeveloperName>
        <label>Current code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>data_source_cd__c</fullName>
        <externalDeveloperName>data_source_cd</externalDeveloperName>
        <label>Data source code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>date__c</fullName>
        <externalDeveloperName>date</externalDeveloperName>
        <label>Date</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>decimaltest__c</fullName>
        <label>decimaltest</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>denom__c</fullName>
        <externalDeveloperName>denom</externalDeveloperName>
        <label>Denom</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>denom_pref__c</fullName>
        <externalDeveloperName>denom_pref</externalDeveloperName>
        <label>Denom pref</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>denom_pref_i__c</fullName>
        <externalDeveloperName>denom_pref_i</externalDeveloperName>
        <label>Denom pref i</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>denom_total__c</fullName>
        <externalDeveloperName>denom_total</externalDeveloperName>
        <label>Denom total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>derived_flag__c</fullName>
        <externalDeveloperName>derived_flag</externalDeveloperName>
        <label>Derived flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>direction__c</fullName>
        <externalDeveloperName>direction</externalDeveloperName>
        <label>Direction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dl_num__c</fullName>
        <externalDeveloperName>dl_num</externalDeveloperName>
        <label>Dl num</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dl_state_cd__c</fullName>
        <externalDeveloperName>dl_state_cd</externalDeveloperName>
        <label>Dl state code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>do_not_contact_channel__c</fullName>
        <externalDeveloperName>do_not_contact_channel</externalDeveloperName>
        <label>Do not contact channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dob__c</fullName>
        <externalDeveloperName>dob</externalDeveloperName>
        <label>Dob</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dpbc__c</fullName>
        <externalDeveloperName>dpbc</externalDeveloperName>
        <label>Dpbc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>due_dt__c</fullName>
        <externalDeveloperName>due_dt</externalDeveloperName>
        <label>Due date</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>due_time__c</fullName>
        <externalDeveloperName>due_time</externalDeveloperName>
        <label>Due time</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>earned_base__c</fullName>
        <externalDeveloperName>earned_base</externalDeveloperName>
        <label>Earned base</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>efft_dy__c</fullName>
        <externalDeveloperName>efft_dy</externalDeveloperName>
        <label>Efft dy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>efft_end_dt__c</fullName>
        <externalDeveloperName>efft_end_dt</externalDeveloperName>
        <label>Efft end date</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>efft_mn__c</fullName>
        <externalDeveloperName>efft_mn</externalDeveloperName>
        <label>Efft mn</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>efft_start_dt__c</fullName>
        <externalDeveloperName>efft_start_dt</externalDeveloperName>
        <label>Efft start date</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>efft_yr__c</fullName>
        <externalDeveloperName>efft_yr</externalDeveloperName>
        <label>Efft yr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <externalDeveloperName>email</externalDeveloperName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>email_address_quality_cd__c</fullName>
        <externalDeveloperName>email_address_quality_cd</externalDeveloperName>
        <label>Email address quality code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>email_address_valid_cd__c</fullName>
        <externalDeveloperName>email_address_valid_cd</externalDeveloperName>
        <label>Email address valid code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>email_chg_timestamp__c</fullName>
        <externalDeveloperName>email_chg_timestamp</externalDeveloperName>
        <label>Email chg timestamp</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>email_engagement_cd__c</fullName>
        <externalDeveloperName>email_engagement_cd</externalDeveloperName>
        <label>Email engagement code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>email_flag__c</fullName>
        <externalDeveloperName>email_flag</externalDeveloperName>
        <label>Email flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>email_id__c</fullName>
        <externalDeveloperName>email_id</externalDeveloperName>
        <label>Email id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>email_status__c</fullName>
        <externalDeveloperName>email_status</externalDeveloperName>
        <label>Email status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>email_type__c</fullName>
        <externalDeveloperName>email_type</externalDeveloperName>
        <label>Email type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>entered_by__c</fullName>
        <externalDeveloperName>entered_by</externalDeveloperName>
        <label>Entered by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>est_names_12mn__c</fullName>
        <externalDeveloperName>est_names_12mn</externalDeveloperName>
        <label>Est names 12mn</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ethdom_relg_cd__c</fullName>
        <externalDeveloperName>ethdom_relg_cd</externalDeveloperName>
        <label>Ethdom relg code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ethdom_relg_cd_desc__c</fullName>
        <externalDeveloperName>ethdom_relg_cd_desc</externalDeveloperName>
        <label>Ethdom relg code description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ethnic_code__c</fullName>
        <externalDeveloperName>ethnic_code</externalDeveloperName>
        <label>Ethnic code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ethnic_code_desc__c</fullName>
        <externalDeveloperName>ethnic_code_desc</externalDeveloperName>
        <label>Ethnic code description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ethnic_group1__c</fullName>
        <externalDeveloperName>ethnic_group1</externalDeveloperName>
        <label>Ethnic group1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ethnic_group2__c</fullName>
        <externalDeveloperName>ethnic_group2</externalDeveloperName>
        <label>Ethnic group2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>event_flag__c</fullName>
        <externalDeveloperName>event_flag</externalDeveloperName>
        <label>Event flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>event_id__c</fullName>
        <externalDeveloperName>event_id</externalDeveloperName>
        <label>Event id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>file_id__c</fullName>
        <externalDeveloperName>file_id</externalDeveloperName>
        <label>File id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>firm_name__c</fullName>
        <externalDeveloperName>firm_name</externalDeveloperName>
        <label>Firm name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>first_name__c</fullName>
        <externalDeveloperName>first_name</externalDeveloperName>
        <label>First name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>first_trip_dt__c</fullName>
        <externalDeveloperName>first_trip_dt</externalDeveloperName>
        <label>First trip date</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>freeform_value__c</fullName>
        <externalDeveloperName>freeform_value</externalDeveloperName>
        <label>Freeform value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>game_type__c</fullName>
        <externalDeveloperName>game_type</externalDeveloperName>
        <label>Game type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gender__c</fullName>
        <externalDeveloperName>gender</externalDeveloperName>
        <label>Gender</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>group1__c</fullName>
        <externalDeveloperName>group1</externalDeveloperName>
        <label>Group1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>group2__c</fullName>
        <externalDeveloperName>group2</externalDeveloperName>
        <label>Group2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>group3__c</fullName>
        <externalDeveloperName>group3</externalDeveloperName>
        <label>Group3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>group_1__c</fullName>
        <externalDeveloperName>group_1</externalDeveloperName>
        <label>Group 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>group_2__c</fullName>
        <externalDeveloperName>group_2</externalDeveloperName>
        <label>Group 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>group_3__c</fullName>
        <externalDeveloperName>group_3</externalDeveloperName>
        <label>Group 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>group_code__c</fullName>
        <externalDeveloperName>group_code</externalDeveloperName>
        <label>Group code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>group_code_desc__c</fullName>
        <externalDeveloperName>group_code_desc</externalDeveloperName>
        <label>Group code description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>groups__c</fullName>
        <externalDeveloperName>groups</externalDeveloperName>
        <label>Groups</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gst_pref_mail_flag__c</fullName>
        <externalDeveloperName>gst_pref_mail_flag</externalDeveloperName>
        <label>Gst pref mail flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gst_rel_id__c</fullName>
        <externalDeveloperName>gst_rel_id</externalDeveloperName>
        <label>Gst rel id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hotel_flag__c</fullName>
        <externalDeveloperName>hotel_flag</externalDeveloperName>
        <label>Hotel flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id_verified__c</fullName>
        <externalDeveloperName>id_verified</externalDeveloperName>
        <label>Id verified</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inegertest__c</fullName>
        <label>inegertest</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ins_run_id__c</fullName>
        <externalDeveloperName>ins_run_id</externalDeveloperName>
        <label>Ins run id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>interest__c</fullName>
        <externalDeveloperName>interest</externalDeveloperName>
        <label>Interest</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>interest_cd__c</fullName>
        <externalDeveloperName>interest_cd</externalDeveloperName>
        <label>Interest code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>interest_cd_fk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interest Description</label>
        <referenceTo>Interest_Description__c</referenceTo>
        <relationshipLabel>Customer Infos</relationshipLabel>
        <relationshipName>Customer_Infos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>interest_group__c</fullName>
        <externalDeveloperName>interest_group</externalDeveloperName>
        <label>Interest group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>interest_id__c</fullName>
        <externalDeveloperName>interest_id</externalDeveloperName>
        <label>Interest id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>interest_notes__c</fullName>
        <externalDeveloperName>interest_notes</externalDeveloperName>
        <label>Interest notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>interest_status__c</fullName>
        <externalDeveloperName>interest_status</externalDeveloperName>
        <label>Interest status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>it_qry_category__c</fullName>
        <externalDeveloperName>it_qry_category</externalDeveloperName>
        <label>It qry category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>job_title__c</fullName>
        <externalDeveloperName>job_title</externalDeveloperName>
        <label>Job title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>last_activity_dt__c</fullName>
        <externalDeveloperName>last_activity_dt</externalDeveloperName>
        <label>Last activity date</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>last_bounce_cd__c</fullName>
        <externalDeveloperName>last_bounce_cd</externalDeveloperName>
        <label>Last bounce code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>last_change_timestamp_utc__c</fullName>
        <externalDeveloperName>last_change_timestamp_utc</externalDeveloperName>
        <label>Last change timestamp utc</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>last_contact_dt_by_me__c</fullName>
        <externalDeveloperName>last_contact_dt_by_me</externalDeveloperName>
        <label>Last contact date by me</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>last_name__c</fullName>
        <externalDeveloperName>last_name</externalDeveloperName>
        <label>Last name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>last_rep_cd_date__c</fullName>
        <externalDeveloperName>last_rep_cd_date</externalDeveloperName>
        <label>Last rep code date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>last_rep_h_date__c</fullName>
        <externalDeveloperName>last_rep_h_date</externalDeveloperName>
        <label>Last rep h date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>last_trip_dt__c</fullName>
        <externalDeveloperName>last_trip_dt</externalDeveloperName>
        <label>Last trip date</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>last_update__c</fullName>
        <externalDeveloperName>last_update</externalDeveloperName>
        <label>Last update</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>last_update_dt__c</fullName>
        <externalDeveloperName>last_update_dt</externalDeveloperName>
        <label>Last update date</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lastupdate__c</fullName>
        <externalDeveloperName>lastupdate</externalDeveloperName>
        <label>Lastupdate</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>machines__c</fullName>
        <externalDeveloperName>machines</externalDeveloperName>
        <label>Machines</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mail_cd__c</fullName>
        <externalDeveloperName>mail_cd</externalDeveloperName>
        <label>Mail code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mail_flag__c</fullName>
        <externalDeveloperName>mail_flag</externalDeveloperName>
        <label>Mail flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>main_ethnic_type__c</fullName>
        <externalDeveloperName>main_ethnic_type</externalDeveloperName>
        <label>Main ethnic type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>